#ifndef IBUTTON_H
#define IBUTTON_H

class IButton
{
    public:
        virtual void press()=0;
};

#endif