#ifndef ITEXTBOX_H
#define ITEXTBOX_H

class ITextbox
{
    public:
        virtual void show_text()=0;
};

#endif